[gd_scene load_steps=19 format=3 uid="uid://dtf5hvms31lpo"]

[ext_resource type="Script" uid="uid://bak3i2quo04b5" path="res://NPCs/follower/follower.gd" id="1_jyorp"]
[ext_resource type="Texture2D" uid="uid://ba18py8654due" path="res://NPCs/follower/default_sprite.png" id="2_widq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxsik"]
size = Vector2(20, 7)

[sub_resource type="Animation" id="Animation_8a1cd"]

[sub_resource type="Animation" id="Animation_8inji"]

[sub_resource type="Animation" id="Animation_f73fk"]

[sub_resource type="Animation" id="Animation_lr7t0"]

[sub_resource type="Animation" id="Animation_vewpj"]
resource_name = "stand"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 58, 59, 57, 1, 83, 82, 81, 80, 1]
}

[sub_resource type="Animation" id="Animation_s23cd"]

[sub_resource type="Animation" id="Animation_yjlrh"]

[sub_resource type="Animation" id="Animation_twanf"]

[sub_resource type="Animation" id="Animation_xjg2j"]

[sub_resource type="Animation" id="Animation_rh806"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_wl4ib"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [25, 26, 25, 24]
}

[sub_resource type="Animation" id="Animation_igh2m"]
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [37, 36, 37, 38]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gooxu"]
_data = {
&"lay": SubResource("Animation_8a1cd"),
&"run_down": SubResource("Animation_8inji"),
&"run_right": SubResource("Animation_f73fk"),
&"run_up": SubResource("Animation_lr7t0"),
&"stand_down": SubResource("Animation_vewpj"),
&"stand_right": SubResource("Animation_s23cd"),
&"stand_up": SubResource("Animation_yjlrh"),
&"wait": SubResource("Animation_twanf"),
&"wait_nervous": SubResource("Animation_xjg2j"),
&"walk_down": SubResource("Animation_rh806"),
&"walk_right": SubResource("Animation_wl4ib"),
&"walk_up": SubResource("Animation_igh2m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ajkcl"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t03hy"]
radius = 28.0

[node name="Follower" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_jyorp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_jxsik")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"animation_lib_1": SubResource("AnimationLibrary_gooxu")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_widq6")
offset = Vector2(0, -40)
hframes = 12
vframes = 8
frame = 1

[node name="stop_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="stop_area"]
shape = SubResource("CircleShape2D_ajkcl")

[node name="hit_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_area"]
shape = SubResource("CircleShape2D_t03hy")
debug_color = Color(0.627451, 0.356863, 0.984314, 0.419608)

[connection signal="body_entered" from="stop_area" to="." method="_on_stop_area_body_entered"]
[connection signal="body_exited" from="stop_area" to="." method="_on_stop_area_body_exited"]
[connection signal="body_entered" from="hit_area" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="hit_area" to="." method="_on_hit_area_body_exited"]
